# serializer version: 1
# name: test_accompanying_report_event_handler[False]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100004</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>accompanying report</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventAccompanyingReport>
  		<ns1:eventType>accompanying report</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:document>
  			<ns4:uuid>663448f0-a6d9-44da-a1d9-8890fdc6912c</ns4:uuid>
  			<ns4:titles>
  				<ns5:title>parent</ns5:title>
  			</ns4:titles>
  			<ns4:status>signed</ns4:status>
  			<ns4:files>
  				<ns4:file>
  					<ns4:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns4:pathFileName>
  					<ns4:mimeType>multipart/related</ns4:mimeType>
  				</ns4:file>
  			</ns4:files>
  			<ns4:documentKind>Paul Mitchell</ns4:documentKind>
  		</ns1:document>
  		<ns1:document>
  			<ns4:uuid>a21a0d75-7490-4e26-8022-f6665cf7716d</ns4:uuid>
  			<ns4:titles>
  				<ns5:title>child</ns5:title>
  			</ns4:titles>
  			<ns4:status>signed</ns4:status>
  			<ns4:files>
  				<ns4:file>
  					<ns4:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns4:pathFileName>
  					<ns4:mimeType>audio/L24</ns4:mimeType>
  				</ns4:file>
  			</ns4:files>
  			<ns4:documentKind>Paul Mitchell</ns4:documentKind>
  		</ns1:document>
  	</ns1:eventAccompanyingReport>
  </ns1:delivery>
  
  '''
# ---
# name: test_accompanying_report_event_handler[True]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0039/2">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100004</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>accompanying report</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventAccompanyingReport>
  		<ns1:eventType>accompanying report</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:document>
  			<ns4:uuid>663448f0-a6d9-44da-a1d9-8890fdc6912c</ns4:uuid>
  			<ns4:titles>
  				<ns5:title>parent</ns5:title>
  			</ns4:titles>
  			<ns4:status>signed</ns4:status>
  			<ns4:files>
  				<ns4:file>
  					<ns4:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns4:pathFileName>
  					<ns4:mimeType>multipart/related</ns4:mimeType>
  				</ns4:file>
  			</ns4:files>
  			<ns4:documentKind>Paul Mitchell</ns4:documentKind>
  		</ns1:document>
  		<ns1:document>
  			<ns4:uuid>a21a0d75-7490-4e26-8022-f6665cf7716d</ns4:uuid>
  			<ns4:titles>
  				<ns5:title>child</ns5:title>
  			</ns4:titles>
  			<ns4:status>signed</ns4:status>
  			<ns4:files>
  				<ns4:file>
  					<ns4:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns4:pathFileName>
  					<ns4:mimeType>audio/L24</ns4:mimeType>
  				</ns4:file>
  			</ns4:files>
  			<ns4:documentKind>Paul Mitchell</ns4:documentKind>
  		</ns1:document>
  		<ns1:remark>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum l…</ns1:remark>
  		<ns1:ancillaryClauses>nebenbestimmung&amp;#13;&amp;#10;blablabla&amp;#13;&amp;#10;blu; yeah</ns1:ancillaryClauses>
  	</ns1:eventAccompanyingReport>
  </ns1:delivery>
  
  '''
# ---
# name: test_event_handlers[ChangeResponsibility]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0010/6">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200005</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>change responsibility</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventChangeResponsibility>
  		<ns1:eventType>change responsibility</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:entryOffice>
  			<ns1:entryOfficeIdentification>
  				<ns4:uid>
  					<ns4:uidOrganisationIdCategorie>CHE</ns4:uidOrganisationIdCategorie>
  					<ns4:uidOrganisationId>123123123</ns4:uidOrganisationId>
  				</ns4:uid>
  				<ns4:localOrganisationId>
  					<ns4:organisationIdCategory>ebaube</ns4:organisationIdCategory>
  					<ns4:organisationId><!-- ORGANISATION_ID --></ns4:organisationId>
  				</ns4:localOrganisationId>
  				<ns4:organisationName>Leitbehörde Burgdorf</ns4:organisationName>
  				<ns4:legalForm>0223</ns4:legalForm>
  			</ns1:entryOfficeIdentification>
  			<ns1:municipality>
  				<ns5:municipalityName>Burgdorf</ns5:municipalityName>
  				<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  			</ns1:municipality>
  		</ns1:entryOffice>
  		<ns1:responsibleDecisionAuthority>
  			<ns1:decisionAuthority>
  				<ns3:buildingAuthorityIdentificationType>
  					<ns4:uid>
  						<ns4:uidOrganisationIdCategorie>CHE</ns4:uidOrganisationIdCategorie>
  						<ns4:uidOrganisationId>123123123</ns4:uidOrganisationId>
  					</ns4:uid>
  					<ns4:localOrganisationId>
  						<ns4:organisationIdCategory>ebaube</ns4:organisationIdCategory>
  						<ns4:organisationId><!-- ORGANISATION_ID --></ns4:organisationId>
  					</ns4:localOrganisationId>
  					<ns4:organisationName>Leitbehörde Madiswil</ns4:organisationName>
  					<ns4:legalForm>0223</ns4:legalForm>
  				</ns3:buildingAuthorityIdentificationType>
  				<ns3:address>
  					<ns6:street>Testweg 5</ns6:street>
  					<ns6:town>Madiswil</ns6:town>
  					<ns6:swissZipCode>3500</ns6:swissZipCode>
  					<ns6:country>
  						<ns6:countryNameShort>CH</ns6:countryNameShort>
  					</ns6:country>
  				</ns3:address>
  			</ns1:decisionAuthority>
  		</ns1:responsibleDecisionAuthority>
  	</ns1:eventChangeResponsibility>
  </ns1:delivery>
  
  '''
# ---
# name: test_event_handlers[Claim]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200004</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>claim</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventRequest>
  		<ns1:eventType>claim</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  	</ns1:eventRequest>
  </ns1:delivery>
  
  '''
# ---
# name: test_event_handlers[FileSubsequently]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100001</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>file subsequently</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventSubmitPlanningPermissionApplication>
  		<ns1:eventType>file subsequently</ns1:eventType>
  		<ns1:planningPermissionApplication>
  			<ns1:planningPermissionApplicationIdentification>
  				<ns1:localID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:localID>
  				<ns1:otherID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:otherID>
  				<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  			</ns1:planningPermissionApplicationIdentification>
  			<ns1:description>Testvorhaben</ns1:description>
  			<ns1:applicationType>Baugesuch</ns1:applicationType>
  			<ns1:profilingYesNo>false</ns1:profilingYesNo>
  			<ns1:intendedPurpose>Wohnen</ns1:intendedPurpose>
  			<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  			<ns1:natureRisk>
  				<ns1:riskDesignation>Felssturz</ns1:riskDesignation>
  				<ns1:riskExists>true</ns1:riskExists>
  			</ns1:natureRisk>
  			<ns1:constructionCost>1000.0</ns1:constructionCost>
  			<ns1:namedMetaData>
  				<ns3:metaDataName>status</ns3:metaDataName>
  				<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  			</ns1:namedMetaData>
  			<ns1:locationAddress>
  				<ns4:street>Teststrasse</ns4:street>
  				<ns4:houseNumber>23b</ns4:houseNumber>
  				<ns4:town>unknown</ns4:town>
  				<ns4:swissZipCode>9999</ns4:swissZipCode>
  				<ns4:country>
  					<ns4:countryNameShort>CH</ns4:countryNameShort>
  				</ns4:country>
  			</ns1:locationAddress>
  			<ns1:realestateInformation>
  				<ns1:realestate>
  					<ns3:realestateIdentification>
  						<ns3:number>1586</ns3:number>
  					</ns3:realestateIdentification>
  					<ns3:realestateType>8</ns3:realestateType>
  					<ns3:coordinates>
  						<ns3:LV95>
  							<ns3:east>2480000.0</ns3:east>
  							<ns3:north>1070000.0</ns3:north>
  							<ns3:originOfCoordinates>904</ns3:originOfCoordinates>
  						</ns3:LV95>
  					</ns3:coordinates>
  				</ns1:realestate>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  				<ns1:buildingInformation>
  					<ns1:building>
  						<ns3:EGID>1738778</ns3:EGID>
  						<ns3:numberOfFloors>2</ns3:numberOfFloors>
  						<ns3:buildingCategory>1040</ns3:buildingCategory>
  						<ns3:civilDefenseShelter>true</ns3:civilDefenseShelter>
  					</ns1:building>
  				</ns1:buildingInformation>
  				<ns1:owner>
  					<ns1:ownerAdress>
  						<ns4:person>
  							<ns4:firstName>Testvorname</ns4:firstName>
  							<ns4:lastName>Testname</ns4:lastName>
  						</ns4:person>
  						<ns4:addressInformation>
  							<ns4:street>Teststrasse</ns4:street>
  							<ns4:houseNumber>None</ns4:houseNumber>
  							<ns4:town>Testort</ns4:town>
  							<ns4:swissZipCode>1234</ns4:swissZipCode>
  							<ns4:country>
  								<ns4:countryNameShort>CH</ns4:countryNameShort>
  							</ns4:country>
  						</ns4:addressInformation>
  					</ns1:ownerAdress>
  				</ns1:owner>
  			</ns1:realestateInformation>
  			<ns1:zone>
  				<ns1:zoneDesignation>Testnutzungszone</ns1:zoneDesignation>
  			</ns1:zone>
  			<ns1:constructionProjectInformation>
  				<ns1:constructionProject>
  					<ns3:totalCostsOfProject>1000</ns3:totalCostsOfProject>
  					<ns3:status>6701</ns3:status>
  					<ns3:description>Testvorhaben</ns3:description>
  					<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  				</ns1:constructionProject>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:constructionProjectInformation>
  			<ns1:document>
  				<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  				<ns6:titles>
  					<ns7:title>dummy</ns7:title>
  				</ns6:titles>
  				<ns6:status>signed</ns6:status>
  				<ns6:files>
  					<ns6:file>
  						<ns6:pathFileName>unknown</ns6:pathFileName>
  						<ns6:mimeType>unknown</ns6:mimeType>
  					</ns6:file>
  				</ns6:files>
  			</ns1:document>
  		</ns1:planningPermissionApplication>
  		<ns1:relationshipToPerson>
  			<ns1:role>applicant</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns8:officialName>Testname</ns8:officialName>
  						<ns8:firstName>Testvorname</ns8:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>None</ns4:houseNumber>
  					<ns4:town>Testort</ns4:town>
  					<ns4:swissZipCode>1234</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  	</ns1:eventSubmitPlanningPermissionApplication>
  </ns1:delivery>
  
  '''
# ---
# name: test_event_handlers[StatusNotification]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200030</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>status notification</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventStatusNotification>
  		<ns1:eventType>status notification</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:status>in progress</ns1:status>
  		<ns1:remark>circulation_init</ns1:remark>
  	</ns1:eventStatusNotification>
  </ns1:delivery>
  
  '''
# ---
# name: test_event_handlers[WithdrawPlanningPermissionApplication]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100002</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>withdraw planning permission application</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventRequest>
  		<ns1:eventType>withdraw planning permission application</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  	</ns1:eventRequest>
  </ns1:delivery>
  
  '''
# ---
# name: test_file_subsequently_signal
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100001</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>file subsequently</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventSubmitPlanningPermissionApplication>
  		<ns1:eventType>file subsequently</ns1:eventType>
  		<ns1:planningPermissionApplication>
  			<ns1:planningPermissionApplicationIdentification>
  				<ns1:localID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:localID>
  				<ns1:otherID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:otherID>
  				<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  			</ns1:planningPermissionApplicationIdentification>
  			<ns1:description>None</ns1:description>
  			<ns1:applicationType>Baugesuch</ns1:applicationType>
  			<ns1:profilingYesNo>false</ns1:profilingYesNo>
  			<ns1:intendedPurpose>.</ns1:intendedPurpose>
  			<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  			<ns1:namedMetaData>
  				<ns3:metaDataName>status</ns3:metaDataName>
  				<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  			</ns1:namedMetaData>
  			<ns1:locationAddress>
  				<ns4:street>unknown</ns4:street>
  				<ns4:houseNumber>0</ns4:houseNumber>
  				<ns4:town>unknown</ns4:town>
  				<ns4:swissZipCode>9999</ns4:swissZipCode>
  				<ns4:country>
  					<ns4:countryNameShort>CH</ns4:countryNameShort>
  				</ns4:country>
  			</ns1:locationAddress>
  			<ns1:realestateInformation>
  				<ns1:realestate>
  					<ns3:realestateIdentification>
  						<ns3:number>0</ns3:number>
  					</ns3:realestateIdentification>
  					<ns3:realestateType>8</ns3:realestateType>
  				</ns1:realestate>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  				<ns1:owner>
  					<ns1:ownerAdress>
  						<ns4:person>
  							<ns4:firstName>unknown</ns4:firstName>
  							<ns4:lastName>unknown</ns4:lastName>
  						</ns4:person>
  						<ns4:addressInformation>
  							<ns4:street>unknown</ns4:street>
  							<ns4:houseNumber>0</ns4:houseNumber>
  							<ns4:town>unknown</ns4:town>
  							<ns4:swissZipCode>9999</ns4:swissZipCode>
  							<ns4:country>
  								<ns4:countryNameShort>CH</ns4:countryNameShort>
  							</ns4:country>
  						</ns4:addressInformation>
  					</ns1:ownerAdress>
  				</ns1:owner>
  			</ns1:realestateInformation>
  			<ns1:constructionProjectInformation>
  				<ns1:constructionProject>
  					<ns3:status>6701</ns3:status>
  					<ns3:description>unknown</ns3:description>
  					<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  				</ns1:constructionProject>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:constructionProjectInformation>
  			<ns1:document>
  				<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  				<ns6:titles>
  					<ns7:title>dummy</ns7:title>
  				</ns6:titles>
  				<ns6:status>signed</ns6:status>
  				<ns6:files>
  					<ns6:file>
  						<ns6:pathFileName>unknown</ns6:pathFileName>
  						<ns6:mimeType>unknown</ns6:mimeType>
  					</ns6:file>
  				</ns6:files>
  			</ns1:document>
  		</ns1:planningPermissionApplication>
  		<ns1:relationshipToPerson>
  			<ns1:role>applicant</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns8:officialName>None</ns8:officialName>
  						<ns8:firstName>None</ns8:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>None</ns4:street>
  					<ns4:houseNumber>None</ns4:houseNumber>
  					<ns4:town>None</ns4:town>
  					<ns4:swissZipCode>9999</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  	</ns1:eventSubmitPlanningPermissionApplication>
  </ns1:delivery>
  
  '''
# ---
# name: test_submit_event_be[True]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>submit</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventSubmitPlanningPermissionApplication>
  		<ns1:eventType>submit</ns1:eventType>
  		<ns1:planningPermissionApplication>
  			<ns1:planningPermissionApplicationIdentification>
  				<ns1:localID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:localID>
  				<ns1:otherID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>2020-1</ns3:Id>
  				</ns1:otherID>
  				<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  			</ns1:planningPermissionApplicationIdentification>
  			<ns1:description>Testvorhaben</ns1:description>
  			<ns1:applicationType>Baugesuch</ns1:applicationType>
  			<ns1:profilingYesNo>false</ns1:profilingYesNo>
  			<ns1:intendedPurpose>Wohnen</ns1:intendedPurpose>
  			<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  			<ns1:natureRisk>
  				<ns1:riskDesignation>Felssturz</ns1:riskDesignation>
  				<ns1:riskExists>true</ns1:riskExists>
  			</ns1:natureRisk>
  			<ns1:constructionCost>1000.0</ns1:constructionCost>
  			<ns1:namedMetaData>
  				<ns3:metaDataName>status</ns3:metaDataName>
  				<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  			</ns1:namedMetaData>
  			<ns1:locationAddress>
  				<ns4:street>Teststrasse</ns4:street>
  				<ns4:houseNumber>23b</ns4:houseNumber>
  				<ns4:town>unknown</ns4:town>
  				<ns4:swissZipCode>9999</ns4:swissZipCode>
  				<ns4:country>
  					<ns4:countryNameShort>CH</ns4:countryNameShort>
  				</ns4:country>
  			</ns1:locationAddress>
  			<ns1:realestateInformation>
  				<ns1:realestate>
  					<ns3:realestateIdentification>
  						<ns3:number>1586</ns3:number>
  					</ns3:realestateIdentification>
  					<ns3:realestateType>8</ns3:realestateType>
  					<ns3:coordinates>
  						<ns3:LV95>
  							<ns3:east>2480000.0</ns3:east>
  							<ns3:north>1070000.0</ns3:north>
  							<ns3:originOfCoordinates>904</ns3:originOfCoordinates>
  						</ns3:LV95>
  					</ns3:coordinates>
  				</ns1:realestate>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  				<ns1:buildingInformation>
  					<ns1:building>
  						<ns3:EGID>1738778</ns3:EGID>
  						<ns3:numberOfFloors>2</ns3:numberOfFloors>
  						<ns3:buildingCategory>1040</ns3:buildingCategory>
  						<ns3:civilDefenseShelter>true</ns3:civilDefenseShelter>
  					</ns1:building>
  				</ns1:buildingInformation>
  				<ns1:owner>
  					<ns1:ownerAdress>
  						<ns4:person>
  							<ns4:firstName>Testvorname</ns4:firstName>
  							<ns4:lastName>Testname</ns4:lastName>
  						</ns4:person>
  						<ns4:addressInformation>
  							<ns4:street>Teststrasse</ns4:street>
  							<ns4:houseNumber>None</ns4:houseNumber>
  							<ns4:town>Testort</ns4:town>
  							<ns4:swissZipCode>1234</ns4:swissZipCode>
  							<ns4:country>
  								<ns4:countryNameShort>CH</ns4:countryNameShort>
  							</ns4:country>
  						</ns4:addressInformation>
  					</ns1:ownerAdress>
  				</ns1:owner>
  			</ns1:realestateInformation>
  			<ns1:zone>
  				<ns1:zoneDesignation>Testnutzungszone</ns1:zoneDesignation>
  			</ns1:zone>
  			<ns1:constructionProjectInformation>
  				<ns1:constructionProject>
  					<ns3:totalCostsOfProject>1000</ns3:totalCostsOfProject>
  					<ns3:status>6701</ns3:status>
  					<ns3:description>Testvorhaben</ns3:description>
  					<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  				</ns1:constructionProject>
  				<ns1:municipality>
  					<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:constructionProjectInformation>
  			<ns1:document>
  				<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  				<ns6:titles>
  					<ns7:title>dummy</ns7:title>
  				</ns6:titles>
  				<ns6:status>signed</ns6:status>
  				<ns6:files>
  					<ns6:file>
  						<ns6:pathFileName>unknown</ns6:pathFileName>
  						<ns6:mimeType>unknown</ns6:mimeType>
  					</ns6:file>
  				</ns6:files>
  			</ns1:document>
  		</ns1:planningPermissionApplication>
  		<ns1:relationshipToPerson>
  			<ns1:role>applicant</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns8:officialName>Testname</ns8:officialName>
  						<ns8:firstName>Testvorname</ns8:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>None</ns4:houseNumber>
  					<ns4:town>Testort</ns4:town>
  					<ns4:swissZipCode>1234</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  	</ns1:eventSubmitPlanningPermissionApplication>
  </ns1:delivery>
  
  '''
# ---
# name: test_submit_event_sz[Support-instance__location0-baugesuch-instance__user0-1311-new]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5100000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>submit</ns2:subject>
  		<ns2:messageDate>2022-07-07T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventSubmitPlanningPermissionApplication>
  		<ns1:eventType>submit</ns1:eventType>
  		<ns1:planningPermissionApplication>
  			<ns1:planningPermissionApplicationIdentification>
  				<ns1:localID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>TEST-90-22-001</ns3:Id>
  				</ns1:localID>
  				<ns1:otherID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>TEST-90-22-001</ns3:Id>
  				</ns1:otherID>
  				<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  			</ns1:planningPermissionApplicationIdentification>
  			<ns1:description>None</ns1:description>
  			<ns1:applicationType>John Hill</ns1:applicationType>
  			<ns1:profilingYesNo>false</ns1:profilingYesNo>
  			<ns1:intendedPurpose>.</ns1:intendedPurpose>
  			<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  			<ns1:namedMetaData>
  				<ns3:metaDataName>status</ns3:metaDataName>
  				<ns3:metaDataValue>Tiffany Wood</ns3:metaDataValue>
  			</ns1:namedMetaData>
  			<ns1:locationAddress>
  				<ns4:street>unknown</ns4:street>
  				<ns4:houseNumber>0</ns4:houseNumber>
  				<ns4:town>unknown</ns4:town>
  				<ns4:swissZipCode>9999</ns4:swissZipCode>
  				<ns4:country>
  					<ns4:countryNameShort>CH</ns4:countryNameShort>
  				</ns4:country>
  			</ns1:locationAddress>
  			<ns1:realestateInformation>
  				<ns1:realestate>
  					<ns3:realestateIdentification>
  						<ns3:number>0</ns3:number>
  					</ns3:realestateIdentification>
  					<ns3:realestateType>8</ns3:realestateType>
  				</ns1:realestate>
  				<ns1:municipality>
  					<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  					<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  				</ns1:municipality>
  				<ns1:owner>
  					<ns1:ownerAdress>
  						<ns4:person>
  							<ns4:firstName>unknown</ns4:firstName>
  							<ns4:lastName>unknown</ns4:lastName>
  						</ns4:person>
  						<ns4:addressInformation>
  							<ns4:street>unknown</ns4:street>
  							<ns4:houseNumber>0</ns4:houseNumber>
  							<ns4:town>unknown</ns4:town>
  							<ns4:swissZipCode>9999</ns4:swissZipCode>
  							<ns4:country>
  								<ns4:countryNameShort>CH</ns4:countryNameShort>
  							</ns4:country>
  						</ns4:addressInformation>
  					</ns1:ownerAdress>
  				</ns1:owner>
  			</ns1:realestateInformation>
  			<ns1:constructionProjectInformation>
  				<ns1:constructionProject>
  					<ns3:projectStartDate>2022-07-07</ns3:projectStartDate>
  					<ns3:status>6701</ns3:status>
  					<ns3:description>unknown</ns3:description>
  					<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  				</ns1:constructionProject>
  				<ns1:municipality>
  					<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  					<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:constructionProjectInformation>
  			<ns1:document>
  				<ns6:uuid>7c429fde-d404-4ddd-95cb-4f71a2fc0c39</ns6:uuid>
  				<ns6:titles>
  					<ns7:title>free</ns7:title>
  				</ns6:titles>
  				<ns6:status>signed</ns6:status>
  				<ns6:files>
  					<ns6:file>
  						<ns6:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns6:pathFileName>
  						<ns6:mimeType>message/imdn+xml</ns6:mimeType>
  					</ns6:file>
  				</ns6:files>
  				<ns6:documentKind/>
  			</ns1:document>
  			<ns1:referencedPlanningPermissionApplication>
  				<ns1:localID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>TEST-90-22-001</ns3:Id>
  				</ns1:localID>
  				<ns1:otherID>
  					<ns3:IdCategory>eBauNr</ns3:IdCategory>
  					<ns3:Id>TEST-90-22-001</ns3:Id>
  				</ns1:otherID>
  				<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  			</ns1:referencedPlanningPermissionApplication>
  		</ns1:planningPermissionApplication>
  		<ns1:relationshipToPerson>
  			<ns1:role>applicant</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:organisationIdentification>
  						<ns8:uid>
  							<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  							<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  						</ns8:uid>
  						<ns8:localOrganisationId>
  							<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  							<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  						</ns8:localOrganisationId>
  						<ns8:organisationName>White Group</ns8:organisationName>
  						<ns8:organisationAdditionalName>Heather Marsh</ns8:organisationAdditionalName>
  						<ns8:legalForm>0223</ns8:legalForm>
  					</ns3:organisationIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Miller Centers</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>Thomasville</ns4:town>
  					<ns4:swissZipCode>1816</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  		<ns1:relationshipToPerson>
  			<ns1:role>contact</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns9:officialName>Liu</ns9:officialName>
  						<ns9:firstName>Jessica</ns9:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Scott Ridge</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>Lake Williamchester</ns4:town>
  					<ns4:swissZipCode>5731</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  		<ns1:relationshipToPerson>
  			<ns1:role>project author</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns9:officialName>Gilbert</ns9:officialName>
  						<ns9:firstName>Crystal</ns9:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Carl Port</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>Brownstad</ns4:town>
  					<ns4:swissZipCode>9394</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  		<ns1:relationshipToPerson>
  			<ns1:role>landowner</ns1:role>
  			<ns1:person>
  				<ns3:identification>
  					<ns3:personIdentification>
  						<ns9:officialName>Lloyd</ns9:officialName>
  						<ns9:firstName>Ian</ns9:firstName>
  					</ns3:personIdentification>
  				</ns3:identification>
  				<ns3:address>
  					<ns4:street>Ryan Burgs</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>East Charlesburgh</ns4:town>
  					<ns4:swissZipCode>5416</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns3:address>
  			</ns1:person>
  		</ns1:relationshipToPerson>
  	</ns1:eventSubmitPlanningPermissionApplication>
  </ns1:delivery>
  
  '''
# ---
# name: test_task_event_handler_SBs[conclusion]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0147/T0/1">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200009</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>task</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventRequest>
  		<ns1:eventType>task</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:directive>
  			<uuid>00000000-0000-0000-0000-000000000000</uuid>
  			<instruction>process</instruction>
  			<priority>undefined</priority>
  			<comments>
  				<ns4:comment>SB2 eingereicht</ns4:comment>
  			</comments>
  		</ns1:directive>
  		<ns1:document>
  			<ns5:uuid>e8786da8-4cac-4b4c-aac3-cf7c66ac7eac</ns5:uuid>
  			<ns5:titles>
  				<ns4:title>against</ns4:title>
  			</ns5:titles>
  			<ns5:status>signed</ns5:status>
  			<ns5:files>
  				<ns5:file>
  					<ns5:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns5:pathFileName>
  					<ns5:mimeType>audio/basic</ns5:mimeType>
  				</ns5:file>
  			</ns5:files>
  			<ns5:documentKind>David Gomez</ns5:documentKind>
  		</ns1:document>
  	</ns1:eventRequest>
  </ns1:delivery>
  
  '''
# ---
# name: test_task_event_handler_SBs[sb2]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0147/T0/1">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200008</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>task</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventRequest>
  		<ns1:eventType>task</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:directive>
  			<uuid>00000000-0000-0000-0000-000000000000</uuid>
  			<instruction>process</instruction>
  			<priority>undefined</priority>
  			<comments>
  				<ns4:comment>SB1 eingereicht</ns4:comment>
  			</comments>
  		</ns1:directive>
  		<ns1:document>
  			<ns5:uuid>8463f903-f637-4103-b8a9-39dece3eeffb</ns5:uuid>
  			<ns5:titles>
  				<ns4:title>country</ns4:title>
  			</ns5:titles>
  			<ns5:status>signed</ns5:status>
  			<ns5:files>
  				<ns5:file>
  					<ns5:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns5:pathFileName>
  					<ns5:mimeType>image/png</ns5:mimeType>
  				</ns5:file>
  			</ns5:files>
  			<ns5:documentKind>Daniel Mann</ns5:documentKind>
  		</ns1:document>
  	</ns1:eventRequest>
  </ns1:delivery>
  
  '''
# ---
# name: test_task_event_handler_stellungnahme
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0147/T0/1">
  	<ns1:deliveryHeader>
  		<ns2:senderId>http://ebau.local</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200007</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>task</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventRequest>
  		<ns1:eventType>task</ns1:eventType>
  		<ns1:planningPermissionApplicationIdentification>
  			<ns1:localID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:localID>
  			<ns1:otherID>
  				<ns3:IdCategory>eBauNr</ns3:IdCategory>
  				<ns3:Id>2020-1</ns3:Id>
  			</ns1:otherID>
  			<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  		</ns1:planningPermissionApplicationIdentification>
  		<ns1:directive>
  			<uuid>00000000-0000-0000-0000-000000000000</uuid>
  			<instruction>process</instruction>
  			<priority>undefined</priority>
  			<deadline>1981-12-05</deadline>
  			<comments>
  				<ns4:comment>Anforderung einer Stellungnahme</ns4:comment>
  			</comments>
  		</ns1:directive>
  		<ns1:document>
  			<ns5:uuid>50e761c4-c03e-4757-aa06-9a30e9c269ca</ns5:uuid>
  			<ns5:titles>
  				<ns4:title>buy</ns4:title>
  			</ns5:titles>
  			<ns5:status>signed</ns5:status>
  			<ns5:files>
  				<ns5:file>
  					<ns5:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns5:pathFileName>
  					<ns5:mimeType>message/rfc822</ns5:mimeType>
  				</ns5:file>
  			</ns5:files>
  			<ns5:documentKind>Rebecca Gonzalez</ns5:documentKind>
  		</ns1:document>
  	</ns1:eventRequest>
  </ns1:delivery>
  
  '''
# ---
